--- a/Views/Themes/Details.cshtml
+++ b/Views/Themes/Details.cshtml
@@ -48,7 +48,7 @@
     <h2>Passagens Relacionadas</h2>
     @if (Model.Passages != null && Model.Passages.Any())
     {
-        <table>
+        <table class="table table-hover text-center">
             <thead>
             <tr>
                 <th>Livro</th>
@@ -64,12 +64,23 @@
                 <tr>
                     <td>@passage.Book.Name</td>
                     <td>@passage.Chapter</td>
-                    <td>@passage.StartVerse - @passage.EndVerse</td>
-                    <td>@passage.Description</td>
+                    @if (passage.EndVerse == null)
+                    {
+                        <td>@passage.StartVerse</td>
+                    }
+                    else
+                    {
+                        <td>@passage.StartVerse - @passage.EndVerse</td>
+                    }
+                    <td style="max-width: 150px; text-align: justify; word-wrap: break-word; white-space: normal;">
+                        @passage.Description
+                    </td>
+
                     <td>
+                        <a asp-action="EditPassage" asp-route-id="@passage.Id" class="btn btn-primary btn-sm">Editar</a>
                         <form asp-action="DeletePassage" method="post" style="display:inline;">
-                            <input type="hidden" name="id" value="@passage.Id" />
-                            <button type="submit">Excluir</button>
+                            <input type="hidden" name="id" value="@passage.Id"/>
+                            <button type="submit" class="btn btn-danger btn-sm">Excluir</button>
                         </form>
                     </td>
                 </tr>
