--- a/Views/Shared/_Layout.cshtml.css
+++ b/Views/Shared/_Layout.cshtml.css
@@ -2,13 +2,29 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+  color: black !important; /* Mesma cor do texto do footer */
+}
+.navbar-custom {
+  background-color: #589de4; /* Mesma cor do footer */
+  color: black; /* Mesma cor do texto do footer */
 }
 
-a {
-  color: #0077cc;
+.navbar-custom .navbar-brand,
+.navbar-custom .navbar-brand:focus,
+.navbar-custom .navbar-brand:hover,
+.navbar-custom .nav-link {
+  color: black !important; /* Supera estilos conflitantes */
+  text-decoration: none; /* Remove sublinhado se existir */
+}
+
+
+.navbar-custom .navbar-brand,
+.navbar-custom .nav-link {
+  color: black; /* Garantir que os textos e links também tenham a mesma cor */
+}
+
+.navbar-custom .nav-link:hover {
+  color: white; /* Cor de destaque ao passar o mouse */
 }
 
 .btn-primary {
@@ -17,10 +33,8 @@ a {
   border-color: #1861ac;
 }
 
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+.btn-index {
+  width: 100%;
 }
 
 .border-top {
@@ -40,9 +54,14 @@ button.accept-policy {
 }
 
 .footer {
+  background-color: #589de4;
   position: absolute;
   bottom: 0;
   width: 100%;
   white-space: nowrap;
   line-height: 60px;
+  text-align: center; /* Centraliza o texto horizontalmente */
+  display: flex; /* Para centralização flexível */
+  justify-content: center; /* Centraliza horizontalmente */
+  align-items: center; /* Centraliza verticalmente */
 }
