--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -12,6 +12,18 @@ html {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
+
+.card {
+  border: none;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s ease-in-out;
+}
+
+.card:hover {
+  transform: scale(1.05);
+}
+
+
 html {
   position: relative;
   min-height: 100%;
@@ -19,4 +31,5 @@ html {
 
 body {
   margin-bottom: 60px;
+  background-color: #f1f4f6;
 }
