Incluindo o font awesome para utilizar ícones

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -56,5 +56,6 @@
     });
 </script>
 <script src="~/js/search.js"></script>
+<script src="https://kit.fontawesome.com/c50bbcaba6.js" crossorigin="anonymous"></script>
 </body>
 </html>
