--- a/Views/Themes/Edit.cshtml
+++ b/Views/Themes/Edit.cshtml
@@ -8,7 +8,7 @@
     <h1 class="text-center">Editar Tema</h1>
     <hr />
 
-    <form asp-action="EditTheme" asp-controller="Themes" method="post">
+    <form asp-action="Edit" asp-controller="Themes" method="post">
         <input type="hidden" asp-for="Id" />
 
         <!-- Nome do Tema -->
