--- a/Views/Passages/Edit.cshtml
+++ b/Views/Passages/Edit.cshtml
@@ -2,7 +2,7 @@
 
 <h2>Editar Passagem</h2>
 
-<form asp-action="EditPassage" method="post" class="row row-cols-lg-auto g-3 align-items-center">
+<form asp-action="Edit" asp-controller="Passages" method="post" class="row row-cols-lg-auto g-3 align-items-center">
     <input type="hidden" name="Id" value="@Model.Id" />
     <input type="hidden" name="ThemeId" value="@Model.ThemeId" />
 
@@ -34,6 +34,6 @@
     </div>
     <div>
         <button type="submit" class="btn btn-primary">Atualizar</button>
-        <a asp-action="Details" asp-route-id="@Model.ThemeId" class="btn btn-secondary">Cancelar</a>
+        <a asp-action="Details" asp-controller="Themes" asp-route-id="@Model.ThemeId" class="btn btn-secondary">Cancelar</a>
     </div>
 </form>
